# cmake-examples

./: LICENSE  README.md
avr/blink-led/: CMakeLists.txt  README.md  avr-gcc.cmake  main.cpp
x86/app-and-test-with-static-lib/: CMakeLists.txt  README.md
x86/app-and-test-with-static-lib/app/: main.cpp
x86/app-and-test-with-static-lib/core/: Calculator.cpp  Calculator.h
x86/app-and-test-with-static-lib/tests/: CalculatorTest.cpp
x86/hello-world/: CMakeLists.txt  README.md  a.cpp  a.h  main.cpp
